# daywatch

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/daywatch/: __init__.py  __main__.py  cli.py  config.py  parser.py  scheduler.py  templates.py  tray.py  watcher.py
src/daywatch/default_templates/: daily.md  monthly.md  weekly.md  yearly.md
src/daywatch/ui/: preview.py
tests/: test_parser.py  test_scheduler.py  test_templates.py  test_watcher.py
